2009-06-30  Araki Ken  <arakiken@users.sf.net>

	* Supported "ESC ] 4 ; ... ; rgb:%02x/%02x/%02x BEL" sequence.

	* Added 5384-5387 protocol(see doc/en/PROTOCOL.font and PROTOCOL.color).
	
	* configure: Added --with-gui option.

	* xwindow/*.[ch]: USE_WIN32API => USE_WIN32GUI

	* ml_pty_win32.c: Renamed to ml_pty_pipewin32.c.

2009-06-16  Araki Ken  <arakiken@users.sf.net>

	* mkf_utf16_conv.[ch]: Added mkf_utf16le_conv_new()

	* Support 256 color sequence(ESC[38;...m,ESC[48;...m).
	  (Thanks to shinichiro.h).

	* x_gc.[ch]: added(for sharing GC with all x_window except scrollbar and xim).

	* x_color_cache.[ch]: added.

2009-06-04  Araki Ken  <arakiken@users.sf.net>

	* win32: Supported mouse and clipboard.
	
	* README.ja: Fixed explanation of default value of
	  use_multi_column_char option.

2009-05-31  Araki Ken  <arakiken@users.sf.net>

	* Fixed many bugs.

2009-05-28    Araki Ken  <arakiken@users.sf.net>

	* win32/Makefile.in,main.c: deleted.

	* ml_pty_unix.c: renamed to ml_pty.c

	* ml_pty_win32pipe.c: renamed to ml_pty_win32.c

	* x.h x_win32.h main_win32.c,x_color_win32.c,x_font_win32.c,
	  x_imagelib_win32.c,x_window_manager_win32.c,x_window_win32.c,
	  x_xic_win32.c: added

2009-03-24  Araki Ken  <arakiken@users.sf.net>

	* Incomplete win32 support added.

	* win32/: added.

	* ml_pty_win32.c: renamed to ml_pty_win32pipe.c
	  ml_pty.c: renamed to ml_pty_unix.c

2008-11-26  MINAMI Hirokazu  <minami@mistfall.net>, Seiichi SATO  <seiichi@pylone.jp>

	* inputmethod/uim/im_uim.h, xwindow/x_im_candidate_screen.[ch]: honor heading labels.

2008-11-22  Jun Inoue  <jun.lambda@gmail.com>

	* inputmethod/uim/im_uim.c: fix dangling pointer dereference that
	  can cause initialization to fail.

2008-10-21  Seiichi SATO  <seiichi@pylone.jp>

	* inputmethod/iiimf/Makefile.in, configure.in: To detect libiiimcf,
	use pkg-config if available.

2008-08-17  Seiichi SATO  <seiichi@pylone.jp>

	* mkf/script/config.guess, kiklib/script/config.guess,